runFormatTest(
  {
    importMeta: import.meta,
    snippets: [
      "foo: |",
      "foo: |\n",
      "foo: |\n\n",
      "foo: |\n\n\n",
      "foo: |  ",
      "foo: |  \n",
      "foo: |  \n\n",
      "foo: |  \n\n\n",
      "foo: >",
      "foo: >\n",
      "foo: >\n\n",
      "foo: >\n\n\n",
      "foo: >  ",
      "foo: >  \n",
      "foo: >  \n\n",
      "foo: >  \n\n\n",
      "foo: |\n  x\n   ",
      "foo: |\n  x\n   \n",
      "foo: |\n  x\n   \n\n",
      "foo: |\n  x\n  \t",
      "foo: |\n  x\n  \t\n",
      "foo: >\n  x\n   ",
      "foo: >\n  x\n   \n",
      "foo: >\n  x\n   \n\n",
      "foo: >\n  x\n  \t",
      "foo: >\n  x\n  \t\n",
    ],
  },
  ["yaml"],
);
