// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`snippet: #0 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #1 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |

=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #2 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |


=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #3 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |



=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #4 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |  
=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #5 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |  

=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #6 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |  


=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #7 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |  



=====================================output=====================================
foo: |

================================================================================
`;

exports[`snippet: #8 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #9 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >

=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #10 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >


=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #11 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >



=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #12 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >  
=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #13 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >  

=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #14 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >  


=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #15 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >  



=====================================output=====================================
foo: >

================================================================================
`;

exports[`snippet: #16 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
   
=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: #17 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
   

=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: #18 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
   


=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: #19 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  	
=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: #20 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: |
  x
  	

=====================================output=====================================
foo: |
  x

================================================================================
`;

exports[`snippet: #21 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
   
=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: #22 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
   

=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: #23 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
   


=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: #24 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  	
=====================================output=====================================
foo: >
  x

================================================================================
`;

exports[`snippet: #25 format 1`] = `
====================================options=====================================
parsers: ["yaml"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
foo: >
  x
  	

=====================================output=====================================
foo: >
  x

================================================================================
`;
